Fix Project Slide Image Alignment

--- a/src/component/Project/index.scss
+++ b/src/component/Project/index.scss
@@ -39,6 +39,11 @@
             right          : 0;
             bottom         : 0;
             left           : 0;
+
+            img {
+              margin-left  : auto;
+              margin-right : auto;
+            }
           }
         }
 
